refactor(ticket): move projectId into payload
